--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <label for="product-price-in-dollars">Preço da compra em dólares (US$)</label>
                 <input id="product-price-in-dollars" type="number" value="0.00" min="0" class="form-control mg-bottom">
                 <label for="bank-spread">Spread bancário (%)</label>
-                <input id="bank-spread" type="number" min="0" max="100" value="4" step="0.01" class="form-control mg-bottom">
+                <input id="bank-spread" type="number" min="0" value="4" step="0.01" class="form-control mg-bottom">
                 <label for="paid-value-in-brazilian-reais"> <strong>Valor a ser pago em reais (R$)</strong></label>
                 <input id="paid-value-in-brazilian-reais" type="number" value="0.00" class="form-control mg-bottom" readonly>
             </div>
